<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/previousCalculationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textAlignment="textEnd"
        android:layout_marginBottom="40dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:inputType="textPersonName"
        android:hint="@string/displayHint"
        android:textColorHint="@color/greyAccent"
        android:textSize="48sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/one"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:background="@drawable/button_background"
            android:onClick="oneBTN"
            android:text="@string/one"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/zero"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/four"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/two"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_background"
            android:onClick="twoBTN"
            android:text="@string/two"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/zero"
            app:layout_constraintStart_toEndOf="@+id/one"
            app:layout_constraintTop_toBottomOf="@+id/five"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/three"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="threeBTN"
            android:text="@string/three"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/two"
            app:layout_constraintTop_toBottomOf="@+id/six"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/four"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="fourBTN"
            android:text="@string/four"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seven"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/five"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="fiveBTN"
            android:text="@string/five"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/four"
            app:layout_constraintTop_toBottomOf="@+id/eight"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/six"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="sixBTN"
            android:text="@string/six"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/five"
            app:layout_constraintTop_toBottomOf="@+id/nine"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/seven"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="sevenBTN"
            android:text="@string/seven"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clear"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/eight"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="eightBTN"
            android:text="@string/eight"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/seven"
            app:layout_constraintTop_toBottomOf="@+id/openParentheses"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/nine"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="nineBTN"
            android:text="@string/nine"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/eight"
            app:layout_constraintTop_toBottomOf="@+id/closeParentheses"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@drawable/button_background"
            android:onClick="zeroBTN"
            android:text="@string/zero"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/two"
            app:layout_constraintStart_toStartOf="@+id/one"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/add"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_button"
            android:onClick="addBTN"
            android:text="@string/add"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/three"
            app:layout_constraintTop_toBottomOf="@+id/subtract"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/subtract"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_button"
            android:onClick="subtractBTN"
            android:text="@string/subtract"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/six"
            app:layout_constraintTop_toBottomOf="@+id/multiply"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/multiply"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_button"
            android:onClick="multiplyBTN"
            android:text="@string/multiply"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nine"
            app:layout_constraintTop_toBottomOf="@+id/divide"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/divide"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_button"
            android:onClick="divideBTN"
            android:text="@string/divide"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/closeParentheses"
            app:layout_constraintTop_toBottomOf="@+id/backspace"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/equals"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/equals_button"
            android:onClick="equalsBTN"
            android:text="@string/equals"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/point"
            app:layout_constraintTop_toBottomOf="@+id/add"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/closeParentheses"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="closeParenthesesBTN"
            android:text="@string/closeParentheses"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/openParentheses"
            app:layout_constraintTop_toBottomOf="@+id/backspace"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/openParentheses"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="openParenthesesBTN"
            android:text="@string/openParentheses"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/clear"
            app:layout_constraintTop_toBottomOf="@+id/backspace"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/point"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="pointBTN"
            android:text="@string/point"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/zero"
            app:layout_constraintTop_toBottomOf="@+id/three"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/clear"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/clear_button"
            android:onClick="clearBTN"
            android:text="@string/clear"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backspace"
            tools:ignore="UsingOnClickInXml"/>

        <ImageButton
            android:id="@+id/backspace"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/backspace"
            android:onClick="backspaceBTN"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/divide"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/divide"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/backspace"
            tools:ignore="UsingOnClickInXml"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>